syntax = "proto3";

package greet;
option go_package="greetpb";


message Greeting {
    string first_name = 1;
    string last_name = 2;
}

message GreetRequest {
    Greeting greeting = 1;
}

message GreetResponse {
    string result = 1;
}


message GreetManyTimesRequest {
    Greeting greeting = 1;

}

message GreateManyTimesResp{
    string result = 1;
}

message LongGreetRequest {
    Greeting greeting = 1;
}

message LongGreetResp{
    string result = 1;
}

message GreetEveryoneRequest {
    Greeting greeting = 1;
}

message GreetEveryoneResp {
    string result = 1;
}


service GreetService {
    rpc Greet (GreetRequest) returns (GreetResponse) {
    };

    rpc GreetManyTimes (GreetManyTimesRequest) returns (stream GreateManyTimesResp) {
    };

    rpc LongGreet(stream LongGreetRequest) returns (LongGreetResp) {

    };

    rpc GreetEveryone(stream GreetEveryoneRequest) returns (stream GreetEveryoneResp) {};
}